--- a/app/src/main/res/layout/fragment_wallpapers_new.xml
+++ b/app/src/main/res/layout/fragment_wallpapers_new.xml
@@ -9,8 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/bottom_nav_height">
+        android:layout_height="match_parent" >
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
